# QtStaticExample

./: CMakeLists.txt
app/: main.cpp
